# pixi

./: Cargo.toml
crates/pixi_conda/: Cargo.toml
crates/pixi_conda/src/: cli.rs  environment_name.rs  lib.rs  registry.rs
crates/pixi_conda/src/create/: input.rs  mod.rs
crates/pixi_conda/src/run/: mod.rs
crates/pixi_conda_bin/: Cargo.toml
crates/pixi_conda_bin/src/: main.rs
crates/pixi_config/: Cargo.toml
crates/pixi_consts/: Cargo.toml
crates/pixi_utils/: Cargo.toml
crates/pixi_utils/src/: reqwest.rs
examples/flask-hello-world/: pixi.toml
src/: install.rs
src/cli/: add.rs  run.rs
src/environment/: mod.rs
src/global/: common.rs  install.rs
src/global/project/: mod.rs
src/lock_file/: mod.rs  platform_less.rs  update.rs
src/workspace/: environment.rs  virtual_packages.rs  workspace_mut.rs
