[package]
authors.workspace = true
description = "Contains the global configuration for use in a pixi project"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "pixi_config"
readme.workspace = true
repository.workspace = true
version = "0.1.0"

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls", "rattler_networking/rustls-tls", "rattler_repodata_gateway/rustls-tls", "rattler_package_streaming/rustls-tls"]
native-tls = ["reqwest/native-tls", "rattler_networking/native-tls", "rattler_repodata_gateway/native-tls", "rattler_package_streaming/native-tls"]

[dependencies]
clap = { workspace = true, features = ["std", "derive", "env"] }
console = { workspace = true }
dirs = { workspace = true }
fs-err = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true }
pixi_consts = { workspace = true }
rattler = { version = "0.33.7" }
rattler_conda_types = { version = "0.34.0" }
rattler_networking = {  version = "0.24.0", default-features = false, features = ["s3"] }
rattler_package_streaming = { version = "0.22.38", default-features = false }
rattler_repodata_gateway = { version = "0.22.7", default-features = false, features = ["gateway"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_ignored = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml_edit = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }
rstest = { workspace = true }
