[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "pixi_consts"
readme.workspace = true
repository.workspace = true
version = "0.1.0"


[dependencies]
console = { workspace = true }
rattler_cache = { version = "0.3.19" }
rattler_conda_types = { version = "0.34.0" }
url = { workspace = true }
